<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carbackground"
    android:orientation="vertical"
    android:paddingTop="60dp"
    tools:context=".MainActivity">


    <Switch
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="25dp"
        android:text="Timer Mode"
        android:textOff="Timer OFF"
        android:textOn="Timer ON"
        android:textStyle="bold|italic"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Button
        android:id="@+id/button_identify_carMake"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_background"
        android:onClick="identifyCarMake"
        android:soundEffectsEnabled="true"
        android:text="@string/identify_the_car_make"
        android:textColor="#FF1744"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_background"
        android:onClick="getHint"
        android:text="@string/hints"
        android:textColor="#FF1744"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_identify_carImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_background"
        android:onClick="identifyCarImage"
        android:text="@string/identify_the_car_image"
        android:textColor="#FF1744"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_advance_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_background"
        android:onClick="advanceLevel"
        android:text="@string/advanced_level"
        android:textColor="#FF1744"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/car_image"
        app:srcCompat="@drawable/car_head1" />


</LinearLayout>